--- a/case-study-hold.html
+++ b/case-study-hold.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Case Study Holding Page</title>
+    <link rel="stylesheet" href="assets/styles.css" />
   </head>
   <body>
     <h1 class="text-center">Coming Soon</h1>
