add: Service site linked to case study card

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
           <div class="col">
             <div class="card h-100 text-center">
               <a
-                href="case-study-hold.html"
+                href="https://khaisimplestudioseg3125.netlify.app/"
                 class="stretched-link text-decoration-none"
                 target="_blank"
               >
@@ -170,8 +170,9 @@
                   alt="Service Site Placeholder"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Barber Service Site</h5>
-                  <p class="card-text">Coming Soon</p>
+                  <h5 class="card-title">
+                    Simple Studio | Recording Studio Service Site
+                  </h5>
                 </div>
               </a>
             </div>
