add: Memory Game

--- a/index.html
+++ b/index.html
@@ -181,18 +181,17 @@
           <div class="col">
             <div class="card h-100 text-center">
               <a
-                href="case-study-hold.html"
+                href="khaimemorygameseg3125.netlify.app/"
                 class="stretched-link text-decoration-none"
                 target="_blank"
               >
                 <img
-                  src="/assets/images-gifs/small_game.jpg"
+                  src="/assets/images-gifs/small_game.png"
                   class="card-img-top"
                   alt="Small Game"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">RPG Game</h5>
-                  <p class="card-text">Coming Soon</p>
+                  <h5 class="card-title">Gateway.exe | Memory Game</h5>
                 </div>
               </a>
             </div>
