fix: memory game link

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
           <div class="col">
             <div class="card h-100 text-center">
               <a
-                href="khaimemorygameseg3125.netlify.app/"
+                href="https://khaimemorygameseg3125.netlify.app/"
                 class="stretched-link text-decoration-none"
                 target="_blank"
               >
