add: E-commerce Mechanical Keyboard site (A4)

--- a/index.html
+++ b/index.html
@@ -200,20 +200,19 @@
           <div class="col">
             <div class="card h-100 text-center">
               <a
-                href="case-study-hold.html"
+                href="https://khaiecommerceshopseg3125.netlify.app/"
                 class="stretched-link text-decoration-none"
                 target="_blank"
               >
                 <img
-                  src="/assets/images-gifs/ecommerce.jpg"
+                  src="/assets/images-gifs/ecommerce.png"
                   class="card-img-top"
                   alt="E-commerce site"
                 />
                 <div class="card-body">
                   <h5 class="card-title">
-                    Mechanical Keyboard E-commerce site
+                    KhaiKeys | Mechanical Keyboard Shop
                   </h5>
-                  <p class="card-text">Coming Soon</p>
                 </div>
               </a>
             </div>
