add: Interactive Dashboard link (no photo)

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <div class="col">
             <div class="card h-100 text-center">
               <a
-                href="case-study-hold.html"
+                href="https://khaidashboardseg3125.netlify.app/"
                 class="stretched-link text-decoration-none"
                 target="_blank"
               >
@@ -231,8 +231,7 @@
                   alt="Analytics site"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Crypto Analytics</h5>
-                  <p class="card-text">Coming Soon</p>
+                  <h5 class="card-title">Bitcoin (BTC) Dashboard</h5>
                 </div>
               </a>
             </div>
