--- a/index.html
+++ b/index.html
@@ -226,12 +226,14 @@
                 target="_blank"
               >
                 <img
-                  src="/assets/images-gifs/visualization.jpeg"
+                  src="/assets/images-gifs/visualization.png"
                   class="card-img-top"
                   alt="Analytics site"
                 />
                 <div class="card-body">
-                  <h5 class="card-title">Bitcoin (BTC) Dashboard</h5>
+                  <h5 class="card-title">
+                    Bitcoin Bytes | Interactive Dashboard
+                  </h5>
                 </div>
               </a>
             </div>
